--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@metamask/detect-provider": "^1.2.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.4.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
+    "@typechain/ethers-v5": "^8.0.5",
     "ethers": "^5.5.2",
-    "hardhat": "^2.7.1",
+    "forwarded": "^0.2.0",
+    "hardhat-typechain": "^0.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-generator": "^0.1.1",
+    "typechain": "^6.0.5",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.4.0",
+    "hardhat": "^2.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
