--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@typechain/ethers-v5": "^8.0.5",
+    "dotenv": "^10.0.0",
     "ethers": "^5.5.2",
     "forwarded": "^0.2.0",
     "hardhat-typechain": "^0.3.5",
